@@ -1,5 +1,9 @@
 2010-04-05  Ulrich Drepper  <drepper@redhat.com>
 
+	[BZ #11010]
+	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyname3_r): Handle
+	timeouts from servers.
+
 	[BZ #11149]
 	* elf/ldconfig.c (main): Respect chroot setting when looking for
 	the aux cache.
